// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/index/Index renders a loading indicator 1`] = `
<div
  className="root"
>
  <h1
    className="h1"
  >
    <T
      count={1}
      message="Dear {{ name }}, there is one potato left"
      messagePlural="Dear {{ name }}, there are {{ count }} potatoes left"
      name="User"
    />
  </h1>
  <div
    className="root"
  >
    Loading...
  </div>
</div>
`;

exports[`pages/index/Index renders a quote 1`] = `
<div
  className="root"
>
  <h1
    className="h1"
  >
    <T
      count={1}
      message="Dear {{ name }}, there is one potato left"
      messagePlural="Dear {{ name }}, there are {{ count }} potatoes left"
      name="User"
    />
  </h1>
  <p>
    A quote
  </p>
</div>
`;

exports[`pages/index/Index renders an error 1`] = `
<div
  className="root"
>
  <h1
    className="h1"
  >
    <T
      count={1}
      message="Dear {{ name }}, there is one potato left"
      messagePlural="Dear {{ name }}, there are {{ count }} potatoes left"
      name="User"
    />
  </h1>
  <div
    className="root"
  >
    An error
  </div>
</div>
`;
